fixed temperature/humidity endpoints